# simulx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  install.sh  main.cpp
assets/shaders/: default.frag  default.vert
backend/: CMakeLists.txt  engine.cpp  engine.hpp  glad.c  pipeline.hpp  window.hpp  window_manager.cpp  window_manager.hpp  window_utility.cpp
backend/context/: CMakeLists.txt  backend_context.hpp  gl_context.cpp  gl_context.hpp
backend/engine/: engine.cpp  engine.hpp
backend/manager/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
backend/window/: CMakeLists.txt  window.cpp  window.hpp  window_utility.cpp  window_utility.hpp
common/: CMakeLists.txt  logger.cpp  logger.hpp  pipeline.hpp
frontend/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/context/: backend_context.hpp  gl_context.cpp  gl_context.hpp
graphics/engine/: engine.cpp  engine.hpp
graphics/gui/: CMakeLists.txt  gui.cpp  gui.hpp
graphics/manager/: window_manager.cpp  window_manager.hpp
graphics/shader/: gl_shader.cpp  gl_shader.hpp  shader.hpp
graphics/window/: window.cpp  window.hpp  window_utility.cpp  window_utility.hpp
include/glad/: glad.h
scripts/: format.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  logger.hpp  pipeline.hpp
src/graphics/context/: backend_context.hpp  gl_context.cpp  gl_context.hpp
src/graphics/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/graphics/gui/: CMakeLists.txt  gui.cpp  gui.hpp  main_gui.cpp  main_gui.hpp
src/graphics/manager/: window_manager.cpp  window_manager.hpp
src/graphics/shader/: CMakeLists.txt  gl_shader.cpp  gl_shader.hpp  shader.hpp
src/graphics/window/: window.cpp  window.hpp  window_utility.cpp  window_utility.hpp
